# baam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.dev.yml  config.docker-dev.yml  config.front-dev.yml  config.prod.yml  config.yml  docker-compose.yml
.github/workflows/: check.yml  deploy-prod.yml  deploy.yml  frontend.yml  rust-check.yml
.run/: Run baam in dev.run.xml  Run baam in front-dev.run.xml  front dev.run.xml
backend/: .env  Cargo.toml  http-client.env.json  test.http
backend/migrations/2022-09-15-161604_initial/: down.sql  up.sql
backend/migrations/2022-09-27-115002_initial/: up.sql
backend/migrations/2022-11-20-134327_add_session_seed/: up.sql
backend/src/: api.rs  config.rs  diagnostics.rs  error.rs  main.rs  middlewares.rs
backend/src/api/: auth.rs  challenge.rs  error.rs  mod.rs  models.rs  sentry_tunnel.rs  sessions.rs  sso.rs
backend/src/db/: mod.rs  models.rs  schema.rs
deployment/: Chart.yaml  values.yml
deployment/templates/: _helpers.tpl  deployment.yml  ingress.yaml  service.yml
diesel-tracing/: Cargo.toml  README.md
diesel-tracing/src/: lib.rs  pg.rs
frontend/: .env  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts  lib.rs
frontend/src/lib/: +page.svelte  BaamBlog.svelte  BaamIcon.svelte  Button.svelte  CameraState.svelte  Export.svelte  MenuHeader.svelte  MenuItem.svelte  NavItem.svelte  NavLinks.svelte  NavLogin.svelte  Navbar.svelte  OutlineButton.svelte  QRcode.svelte  SessionFeed.svelte  SessionName.svelte  StudentsList.svelte  api.ts  button.svelte  camera.ts  generate_session_code.test.ts  generate_session_code.ts  models.ts  nav-item.svelte  nav-links.svelte  nav-login.svelte  navbar.svelte  outline-button.svelte  precise_timer.ts  session.ts  session_code_encode.test.ts  sessionname.svelte  store.ts  student.ts  students-list.svelte  swiped-events.js
frontend/src/lib/API/: api.ts  models.ts  store.ts
frontend/src/lib/Camera/: Camera.svelte  CameraVideo.svelte  MediaStreamManager.ts  VideoState.ts
frontend/src/lib/Navbar/: NavItem.svelte  NavLogin.svelte  Navbar.svelte
frontend/src/lib/QRcode/: generate_session_code.ts  precise_timer.ts  session_code_encode.ts
frontend/src/lib/Session/: SessionFeed.svelte  StudentsList.svelte
frontend/src/lib/camera/: Camera.svelte  CameraVideo.svelte  MediaStreamManager.ts  ViewfinderOverlay.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/AttendanceCheck/: +page.svelte
frontend/src/routes/AttendanceSessions/: +page.svelte  +page.ts
frontend/src/routes/s/: +page.svelte
frontend/src/routes/sessions/: +page.svelte  +page.ts
frontend/src/routes/sessions/[id]/: +page.svelte  +page.ts
frontend/src/routes/test/: +page.svelte
frontend/tests/: api.ts  test.ts
