[package]
name = "baam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baam-frontend = { path = "../frontend" }

actix-web = "4.1.0"
anyhow = "1.0.64"
url = "2.3.1"
serde = "1.0.144"
config = "0.13.2"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10.0"