[package]
name = "baam"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baam-frontend = { path = "../frontend" }

actix = "0.13.0"
actix-jwt-auth-middleware = "0.1.2"
actix-web = "4.2.1"
anyhow = "1.0.64"
chrono = { version = "0.4.22", features = ["serde"] }
config = "0.13.2"
derive_more = "0.99.17"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
ed25519-dalek = "1.0.1"
enum_dispatch = "0.3.8"
futures = "0.3.24"
jwt-compact = { version = "0.5.0", features = ["ed25519-dalek"] }
openssl = "0.10.41"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10.0"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = "1.0.144"
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.3.1"
actix-http = "3.2.2"
