[package]
name = "baam-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
anyhow = "1.0.64"
awc = "3.0.1"
url = { version = "2.3.1", features = ["serde"] }
tracing = "0.1.36"
serde = { version = "1.0.144", features = ["derive"] }

actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"
change-detection = "1.2.0"